HTML and CSS ready

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 
 <div class="mini_Box">
  
-  <h3 class ="primary">Advice #117</h3>
+  <h3 class ="primary">ADVICE #117</h3>
 
- <p class ="secondry">"Hello World"</p>
+ <p class ="Advice-text">"Hello World"</p>
 
- <button type="button" onclick="alert('Hello world!')"><img src="https://i.ibb.co/CW5Wvry/buttonpng.png" alt="buttonpng" border="0" /></button>
+ <img src="images/pattern-divider-desktop.svg" alt="" class="separation_line">
+
+ <button  id ="dice" type="button" onclick="alert('Hello world!')"><img src="images/icon-dice.svg" alt="Dice to generate new advice"></button>
  
 </div>
 
