--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   
-  
   <title>Frontend Mentor | Advice generator app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -21,21 +20,18 @@
 
 <div class="mini_Box">
  
-  <h3 class ="primary">ADVICE #117</h3>
+  <h3 class ="primary">ADVICE <span id="Advice-number">#117</span></h3>
 
- <p class ="Advice-text">"Hello World"</p>
+ <p class ="Advice-text" id="Advice-text-id">...</p>
 
  <img src="images/pattern-divider-desktop.svg" alt="" class="separation_line">
 
- <button  id ="dice" type="button" onclick="alert('Hello world!')"><img src="images/icon-dice.svg" alt="Dice to generate new advice"></button>
+ <button id ="dice"><img src="images/icon-dice.svg" alt="Dice to generate new advice"></button>
  
 </div>
 
   
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Nada Jrad</a>.
-  </div> -->
+<script src ="script.js"></script>
 </body>
 
 </html>
